# zip-to-parquet

./: Cargo.toml  README.md  flake.nix  test.py
.github/workflows/: release.yml
src/: builder.rs  error.rs  logger.rs  main.rs
