[package]
name = "zip-to-parquet"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
arrow-array = "50.0.0"
clap = { version = "4.4.18", features = ["derive"] }
filebuffer = "0.4.0"
indicatif = "0.17.7"
mmap = "0.1.1"
parquet = "50.0.0"
piz = "0.5.1"
zip = "0.6.6"
