[package]
name = "zip-to-parquet"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
arrow-array = "50.0.0"
clap = { version = "4.4.18", features = ["derive"] }
indicatif = "0.17.7"
parquet = "50.0.0"
zip = "0.6.6"
wax = "0.6.0"
glob = "0.3.1"
